--- a/macarons.html
+++ b/macarons.html
@@ -49,6 +49,9 @@
                 </div>
             </div>
         </header>
+        div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
         <p><strong>WHAT YOU’LL NEED TO MAKE THESE</strong></p>
         <a href="#!"><img class="img-fluid" src="assets/img/Macarons-ingredients.jpg" alt="..." /></a>
         <p><strong>Egg Whites- </strong>Make sure the weigh them using a kitchen scale. Aging egg whites for macarons is an important step. Separate the eggs, place the whites in a clean glass, cover with plastic wrap with a few holes poked in and let them hang out in the fridge for a few days before using. This will dehydrate them and make them perfect for macarons. This step isn’t a must do but a bunch of little things can add up to a big difference when making these cookies. </p>
