--- a/pudding.html
+++ b/pudding.html
@@ -49,7 +49,9 @@
                 </div>
             </div>
         </header>
-        
+        div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
         <p><strong>Ingredients</strong></p>
         <p><strong>FOR CARAMEL SYRUP</strong>½ cup sugar(100 g)</p>
         <p><strong>FOR PUDDING</strong>3 egg yolks,2 eggs,1 teaspoon vanilla,½ cup sugar(100 g),1 ½ cups milk(360 mL) & 6 tablespoons heavy cream</p>
