--- a/cookies.html
+++ b/cookies.html
@@ -49,6 +49,9 @@
                 </div>
             </div>
         </header>
+        div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
         <p><strong>How to Make Sugar Cookies</strong></p><p><strong>First, mix together the dry ingredients:</strong> all-purpose flour, baking soda, cream of tartar, and salt.</p>
         <a href="#!"><img class="img-fluid" src="assets/img/cookieingredients.jpg" alt="..." /></a>
         <p><strong>Then, cream together the butter and sugar in the bowl of a stand mixer.</strong> Beat in the egg, vanilla and almond extracts, and lemon zest, and then add the flour mixture, 1/3 at a time, and mix until everything is well combined.</p>
